--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="menu">
             <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="max-width: 300px;">
             <section class="menu-text">
-                <h1 style="margin-bottom: -1rem;">you know&#x2026; some really fun drinks!</h1>
+                <h1>Blanc Specialty Coffee:</h1>
                 <h2 style="text-align: right;">16oz</h2>
                 <!--Specialty-->
                 <div class="drink-grids">
@@ -47,12 +47,12 @@
                     <article>
                         <h3>The Buff</h3><h3>$5.95</h3>
                     </article>
-                    <p>A double shot of espresso, steamed milk, caramel and toasted marshmallow syrup, topped with whipped cream</p>
+                    <p>A double shot of espresso, steamed milk, caramel and toasted marshmallow syrup</p>
                     
                     <article>
                         <h3>Raspberry Blanc Mocha</h3><h3>$5.95</h3>
                     </article>
-                    <p>A double shot of espresso, steamed milk, rich white chocolate powder, raspberry syrup, and topped with whipped cream</p>
+                    <p>A double shot of espresso, steamed milk, rich white chocolate powder, raspberry syrup</p>
                     
                     <article>
                         <h3>The Russel Roaster</h3><h3>$5.25</h3>
@@ -81,14 +81,14 @@
                 </div>
                 <!--Tea-->
                 <div>
-                    <h1>&#x2026;assorted teas!</h1>
+                    <h1>Local Teas:</h1>
                     <p>Montana Gold - Night on Glacier Bay - Earl Grey (regular and decaf) - Gunpowder Green - Ginger Peach</p>
                 </div>
                 <!--Traditional-->
                 <div>
-                    <h1>perhaps something a bit more normal?</h1>
+                    <h1>Traditional Coffee:</h1>
                     <article class="grid-p" style="display: grid; grid-template-columns: 55% 15% 15% 15%;">
-                        <h3 style="padding-right: 30px;">traditional coffee</h3><h3>12oz</h3><h3>16oz</h3><h3>20oz</h3>
+                        <h3></h3><h3>12oz</h3><h3>16oz</h3><h3>20oz</h3>
                         <p>Americano</p><p>$3.25</p><p>$3.75</p><p>$4.00</p>
                         <p>Drip Coffee</p><p>$3.00</p><p>$3.25</p><p>$3.50</p>
                         <p>Latte (with flavorings)<p>$4.25</p><p>$4.75</p><p>$5.25</p>
@@ -98,15 +98,15 @@
                         <p>Blended Cafe</p><p>$4.25</p><p>$5.00</p><p>$5.75</p>
                     </article>
                     <article style="display: grid; grid-template-columns: 85% 15%" class="add-ons">
-                        <h3>and&#x2026; some add-ons</h3><p></p>
-                        <p>Alternative Milk</p><p>$1.50</p>
+                        <h3 style="color: #ae5631;">Add-ons:</h3><p></p>
+                        <p>Alternative Milk (almond and oat)</p><p>$1.50</p>
                         <p>Flavor</p><p>$0.75</p>
                         <p>Whip</p><p>$1.00</p>
                         <p>Cold foam</p><p>$2.00</p>
                     </article>
                 </div>
                 <!--Lotus-->
-                <h1 style="margin-bottom: -1rem;">and&#x2026; some fun lotus energy drinks</h1>
+                <h1>Blanc Specialty Lotus</h1>
                 <h2 style="text-align: right;">16oz</h2>
                 <div class="drink-grids">
                     <article>
@@ -160,53 +160,40 @@
         <div class="menu h3-margin">
             <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
             <section class="menu-text">
-                <h1>Early</h1>
+                <h1>All-Day Breakfast</h1>
                 <article>
-                    <h3>Muffins: $4.00</h3>
+                    <h3>Muffins: $4.00 (ask for our daily flavors)</h3>
                 </article>
                 <article>
                     <h3>Croissant: $5.00</h3>
                     <ul>
-                        <li>butter brushed, dark chocolate drizzle, or rose hip infused local honey</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Belgian Waffle: $9.00</h3>
-                    <p style="margin-bottom: 0;">3 choices&#x2026;</p>
-                    <ul>
-                        <li>nutella and toasted hazelnuts</li>
-                        <li>pink pepper and local honey</li>
-                        <li>chocolate drizzle</li>
+                        <li>butter brushed, nutella & chopped hazelnut, almond</li>
                     </ul>
                 </article>
                 <article>
                     <h3>Breakfast Wraps: $9.00</h3>
                     <ul>
-                        <li>spanish chorizo, eggs, hash browns, cheese, and cilantro</li>
-                        <li>grilled chicken, eggs, hash browns, feta, and roasted red peppers</li>
-                        <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
+                        <li>bacon, egg, hashbrown, cheese</li>
+                        <li>sausage, egg, hasbrown, cheese</li>
+                        <li>roasted veggies, egg, hashbrown, cheese</li>
                     </ul>
                 </article>
                 <article>
                     <h3>Breakfast Sandwich: $7.00</h3>
                     <ul>
-                        <li>toasted English muffin with egg, cheese, and bacon or sausage</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Buttermilk Biscuits and Country Sausage Gravy: $7.00</h3>
-                    <ul>
-                        <li>add egg, sausage, or bacon with extra cost</li>
+                        <li>toasted croissant with egg, cheese, and bacon or sausage</li>
                     </ul>
                 </article>
             </section>
             <section class="menu-text">
-                <h1>Later</h1>
+                <h1>Lunch</h1>
                 <article>
-                    <h3>Creamy White Cheddar Mac and Cheese: $7.00</h3>
+                    <h3>Creamy White Cheddar Mac and Cheese</h3>
                     <ul>
                         <li>topped with Parmesan bread crumbs</li>
                         <li>Add bacon or grilled chicken: $5.00</li>
+                        <li>10oz: $5.00</li>
+                        <li>16oz: $7.50</li>
                     </ul>
                 </article>
                 <article>
@@ -217,60 +204,44 @@
                     </ul>
                 </article>
                 <article>
-                    <h3>Nachos with Cheese Sauce: $5.00</h3>
-                </article>
-                <article>
-                    <h3>Nacho Supreme: $9.00</h3>
-                    <ul>
-                        <li>beef, olives, pico, sour cream, jalapeño</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Pretzel with Nacho Cheese Sauce: $5.00</h3>
-                </article>
-                <article>
                     <h3>Pizza by the Slice</h3>
                     <ul>
                         <li>cheese: $4.50</li>
                         <li>pepperoni: $6.00</li>
-                        <li>supreme: $7.00</li>
                     </ul>
                 </article>
                 <article>
                     <h3>Salad</h3>
                     <ul>
-                        <li>caesar romaine, cheese, and house toasted croutons: $10.00</li>
-                        <li>green salad roasted red peppers, feta, olives, and Greek dressing: $9.00</li>
-                        <li>add chicken: $5.00</li>
+                        <li>mixed greens with a house-made ranch</li>
+                        <li>add chicken or bacon: $5.00</li>
                     </ul>
                 </article>
                 <article>
                     <h3>Soup</h3>
                     <ul>
-                        <li>house made soups (ask about today's choices)</li>
+                        <li>house made tomato basil (ask for soup special)</li>
+                        <li>10oz cup: $5.00</li>
+                        <li>16oz bowl: $9.00</li>
                     </ul>
-                    <table style="margin-left: 50px; width: 60%; max-width: 500px;">
-                        <tr>
-                            <td style="width: 50%;">10oz cup: $5.00</td><td style="width: 50%;">16oz bowl: $9.00</td>
-                        </tr>
-                    </table>
                 </article>
                 <h1>Last</h1>
                 <article>
-                    <h3>Affogato?</h3>
+                    <ul>
+                        <li>Affogato: A double shot of espresso over two scoops of vanilla ice cream: $6.00</li>
+                    </ul>
                 </article>
             </section>
             <!--Footer-->
             <section class="menu-text" style="display: grid; grid-template-columns: 12fr 11fr; justify-content: start;">
                 <div style="margin: 0; margin-right: 5px;">
-                    <h1>about us&#x2026;</h1>
-                    <p>hours -</p>
-                    <p>Monday through Friday - 6am to close</p>
-                    <p>Saturday - 8am to close</p>
+                    <h1>hours:</h1>
+                    <p>Monday through Friday - 7am to 5pm</p>
+                    <p>Saturday - 8am to 4pm</p>
                     <p>Sunday - closed</p>
                 </div>
                 <div style="margin: 0;">
-                    <h1>and more about us&#x2026;</h1>
+                    <h1>location:</h1>
                     <p>1925 2nd Avenue South</p>
                     <p>Great Falls, MT 59405</p>
                     <a href="https://www.buffaloblanc.com/">www.buffaloblanc.com</a>
